fixed z-index for some elements & prepped string for vibration effect

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -19,9 +19,11 @@
   background: #d6d4d0;
   min-width: 50rem;
   height: 35vh;
+  z-index: 1;
+
 }
 
-.string {
+.row {
   width: 100%;
   height: 100%;
   display: flex;
@@ -31,17 +33,27 @@
 .string:before {
   cursor: pointer;
   content: "";
-  position: absolute;
-  top: 1.75rem;
-  width: 100%;
+  overflow-x: visible;
+  width: 107%;
+  left: 0;
+  margin-top: -.2rem;
   background: linear-gradient(#eee, #999);
-  background-image: url(../img/strings.svg);
-  background-size: auto 100%;
-  background-repeat: repeat;
-  box-shadow: 9rem .3rem .5rem rgba(0, 0, 0, 0.3);
-  z-index: 1;
+  box-shadow: 0rem .3rem .5rem rgba(0, 0, 0, 0.02);
+  z-index: 3;
+  position: absolute;
 }
 
+@keyframes MoveUpDown {
+
+  0%,
+  100% {
+    margin-bottom: 1000px;
+  }
+
+  50% {
+    margin-bottom: 0px;
+  }
+}
 
 .g-str:before {
   height: .4rem;
@@ -56,18 +68,19 @@
 }
 
 .e-str:before {
-  height: 1rem;
+  height: .9rem;
 }
 
 .fret {
   display: flex;
+  position: relative;
+  z-index: 1;
   flex: 1;
   width: 3.5rem;
   border-right: .2rem solid;
   border-image: linear-gradient(to left, #777, #bbb, rgb(0, 0, 0)) 1 100%;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 
 .fret:first-child {
@@ -84,6 +97,7 @@
 }
 
 .fret-key {
+  position: absolute;
   background: teal;
   color: #fff;
   height: 2rem;
@@ -91,7 +105,7 @@
   border-radius: 5rem;
   text-align: center;
   padding-top: .5rem;
-  z-index: 3;
+  z-index: 5;
   font-size: .75rem;
   font-weight: bold;
   text-transform: uppercase;
